--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "list-of-jstransformers": "0.0.2"
   },
   "devDependencies": {
-    "assert-dir-equal": "*",
-    "jstransformer-coffee-script": "*",
-    "jstransformer-jade": "*",
-    "jstransformer-styl": "*",
-    "jstransformer-uglify-js": "git://github.com/jstransformers/jstransformer-uglify-js.git#master",
+    "assert-dir-equal": "^1.0.1",
+    "jstransformer-coffee-script": "^0.1.0",
+    "jstransformer-jade": "0.0.3",
+    "jstransformer-styl": "^0.1.0",
+    "jstransformer-uglify-js": "^0.4.0",
     "metalsmith": "^1.7.0",
     "mocha": "*",
     "standard": "^4.3.3"
