--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   },
   "homepage": "https://github.com/RobLoach/metalsmith-jstransformer",
   "dependencies": {
+    "extend": "^3.0.0",
     "jstransformer": "^0.0.2",
-    "list-of-jstransformers": "0.0.2"
+    "list-of-jstransformers": "^0.0.2"
   },
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
     "jstransformer-coffee-script": "^0.1.0",
-    "jstransformer-jade": "0.0.3",
+    "jstransformer-jade": "^0.0.3",
     "jstransformer-styl": "^0.1.0",
     "jstransformer-uglify-js": "^0.0.4",
     "metalsmith": "^1.7.0",
