--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metalsmith-jstransformer",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Metalsmith JSTransformer Plugin",
   "files": [
     "index.js"
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/RobLoach/metalsmith-jstransformer",
   "dependencies": {
-    "async": "^1.3.0",
+    "async": "^2.0.0-rc.5",
     "clone": "^1.0.2",
     "extend": "^3.0.0",
     "inputformat-to-jstransformer": "^1.1.2",
@@ -42,6 +42,6 @@
     "metalsmith": "2.*",
     "rimraf": "^2.5.0",
     "testit": "^2.0.2",
-    "xo": "^0.12.1"
+    "xo": "^0.15.1"
   }
 }
