--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metalsmith-jstransformer",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Metalsmith JSTransformer Plugin",
   "files": [
     "index.js"
@@ -28,7 +28,7 @@
     "clone": "^1.0.2",
     "extend": "^3.0.0",
     "inputformat-to-jstransformer": "^1.1.2",
-    "jstransformer": "0.0.4",
+    "jstransformer": "~1.0.0",
     "minimatch": "^3.0.0"
   },
   "devDependencies": {
@@ -42,6 +42,6 @@
     "metalsmith": "2.*",
     "rimraf": "^2.5.0",
     "testit": "^2.0.2",
-    "xo": "^0.15.1"
+    "xo": "^0.16.0"
   }
 }
