--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   "devDependencies": {
     "assert-dir-equal": "1.*",
     "jstransformer-coffee-script": "*",
-    "jstransformer-jade": "*",
     "jstransformer-markdown-it": "*",
-    "jstransformer-nunjucks": "^0.2.0",
+    "jstransformer-nunjucks": "*",
+    "jstransformer-pug": "*",
     "jstransformer-styl": "*",
     "jstransformer-uglify-js": "*",
     "metalsmith": "2.*",
