--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jstransformer-nunjucks": "*",
     "jstransformer-pug": "*",
     "jstransformer-styl": "*",
+    "jstransformer-twig": "^1.1.3",
     "jstransformer-uglify-js": "*",
     "metalsmith": "2.*",
     "rimraf": "^2.5.4",
