--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/RobLoach/metalsmith-jstransformer",
   "dependencies": {
-    "async": "^2.1.2",
-    "clone": "^2.0.0",
+    "async": "^2.1.4",
+    "clone": "^2.1.0",
     "extend": "^3.0.0",
-    "inputformat-to-jstransformer": "^1.1.8",
+    "inputformat-to-jstransformer": "^1.1.9",
     "jstransformer": "~1.0.0",
     "minimatch": "^3.0.3"
   },
@@ -38,11 +38,12 @@
     "jstransformer-nunjucks": "*",
     "jstransformer-pug": "*",
     "jstransformer-styl": "*",
-    "jstransformer-twig": "^1.1.3",
+    "jstransformer-twig": "^1.2.0",
     "jstransformer-uglify-js": "*",
     "metalsmith": "2.*",
+    "metalsmith-paths": "^3.0.1",
     "rimraf": "^2.5.4",
     "testit": "^2.1.2",
-    "xo": "^0.17.0"
+    "xo": "^0.17.1"
   }
 }
