--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "node test",
     "posttest": "npm run xo",
-    "xo": "xo --space --no-semicolon"
+    "xo": "xo --space=2 --no-semicolon"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
     "async": "^2.6.0",
     "clone": "^2.1.1",
     "extend": "^3.0.1",
-    "inputformat-to-jstransformer": "^1.2.1",
+    "inputformat-to-jstransformer": "^1.3.0",
     "jstransformer": "~1.0.0",
     "minimatch": "^3.0.4"
   },
@@ -38,12 +38,12 @@
     "jstransformer-nunjucks": "*",
     "jstransformer-pug": "*",
     "jstransformer-styl": "*",
-    "jstransformer-twig": "^1.4.0",
+    "jstransformer-twig": "^1.4.1",
     "jstransformer-uglify-js": "*",
     "metalsmith": "2.*",
     "metalsmith-paths": "^3.0.1",
     "rimraf": "^2.6.2",
     "testit": "^3.0.0",
-    "xo": "^0.18.2"
+    "xo": "^0.20.3"
   }
 }
