--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   ],
   "scripts": {
     "test": "node test",
-    "posttest": "npm run xo",
-    "xo": "xo --space=2 --no-semicolon"
+    "posttest": "xo --space=2 --no-semicolon index.js test/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,9 +23,9 @@
   },
   "homepage": "https://github.com/kalamuna/metalsmith-jstransformer",
   "dependencies": {
-    "async": "^2.6.0",
-    "clone": "^2.1.1",
-    "extend": "^3.0.1",
+    "async": "^2.6.1",
+    "clone": "^2.1.2",
+    "extend": "^3.0.2",
     "inputformat-to-jstransformer": "^1.3.0",
     "jstransformer": "~1.0.0",
     "minimatch": "^3.0.4"
@@ -44,6 +43,6 @@
     "metalsmith-paths": "^3.0.1",
     "rimraf": "^2.6.2",
     "testit": "^3.0.0",
-    "xo": "^0.21.0"
+    "xo": "^0.23.0"
   }
 }
