--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metalsmith-jstransformer",
-  "version": "0.13.2",
+  "version": "1.0.0",
   "description": "Metalsmith JSTransformer Plugin",
   "files": [
     "index.js"
@@ -23,10 +23,10 @@
   },
   "homepage": "https://github.com/kalamuna/metalsmith-jstransformer",
   "dependencies": {
-    "async": "^3.1.0",
+    "async": "^3.2.0",
     "clone": "^2.1.2",
     "extend": "^3.0.2",
-    "inputformat-to-jstransformer": "^1.3.3",
+    "inputformat-to-jstransformer": "^1.4.0",
     "jstransformer": "~1.0.0",
     "minimatch": "^3.0.4"
   },
@@ -37,12 +37,12 @@
     "jstransformer-nunjucks": "*",
     "jstransformer-pug": "*",
     "jstransformer-styl": "*",
-    "jstransformer-twig": "^1.6.1",
+    "jstransformer-twig": "*",
     "jstransformer-uglify-js": "*",
     "metalsmith": "2.*",
     "metalsmith-paths": "^3.0.1",
-    "rimraf": "^3.0.0",
+    "rimraf": "^3.0.2",
     "testit": "^3.1.0",
-    "xo": "^0.25.3"
+    "xo": "*"
   }
 }
